habit-section-added

--- a/index .html
+++ b/index .html
@@ -13,7 +13,7 @@
         <h1 class="nav-color"><i>Fitness</i> </h1>
         <div>
             <ul>
-                <li class="Home nav-background">Home</li>
+                <li class="Home-bar nav-background">Home</li>
                 <li>Service</li>
                 <li>Contact</li>
                 <li>About</li>
@@ -26,9 +26,9 @@
         <div class="first-banner">
             <h1>Get body in <br><span>shape</span> & stay <br>healthy</h1>
             <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
-            <div class="btn-content">
-                <button class="btn-primary primary-background border">Join Club Now!</button>
-                <button class="btn-primary secondary-background ">Download App</button>
+            <div class="btn-banner">
+                <button class="btn-primary  border">Join Club Now!</button>
+                <button class="btn-primary  button-content">Download App</button>
             </div>
 
 
@@ -49,9 +49,46 @@
 
         </div>
     </div>
-
-
    </header>
+
+   <main>
+
+    <section class="change-container">
+        <div class="change-text-content">
+            <h2>Change Your Habits</h2>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+        </div>
+        <div class="habits-container">
+            <div class="habit">
+                <img src="images/image 3.png" alt="">
+                <h4>Movement</h4>
+                <p>We believe fitness should be <br> accessible to everyone</p>
+            </div>
+            <div class="habit">
+                <img src="images/image19.png" alt="">
+                <h4>Time</h4>
+                <p>We believe fitness should be <br> accessible to everyone</p>
+            </div>
+            <div class="habit">
+                <img src="images/image20.png" alt="">
+                <h4>Practice</h4>
+                <p>We believe fitness should be <br> accessible to everyone</p>
+            </div>
+            <div class="habit">
+                <img src="images/image 5.png" alt="">
+                <h4>Weight Loss</h4>
+                <p>We believe fitness should be <br> accessible to everyone</p>
+            </div>
+
+        </div>
+    </section>
+  
+
+
+
+
+
+   </main>
 
 </body>
 </html>
