--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
         </div>
     </div>
    </header>
-
    <main>
-
     <section class="change-container">
         <div class="change-text-content">
             <h2>Change Your Habits</h2>
@@ -82,13 +80,25 @@
 
         </div>
     </section>
-  
+    <section class="run-container">
+        <div class="run-content">
+            <h1>Run an Extra <br>
+                Mile Easily</h1>
+            <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br>hundreds of professional workouts.</p>
+            <button class="btn-primary-run">Join Now</button>
+
+        </div>
+        <div class="run-img">
+            <img src="images/run.jpg" alt="">
+
+        </div>
+    </section>
 
 
 
-
-
+    
    </main>
+   <footer></footer>
 
 </body>
 </html>
