--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h1>Run an Extra <br>
                 Mile Easily</h1>
             <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br>hundreds of professional workouts.</p>
-            <button class="btn-primary-run">Join Now</button>
+            <button class="btn-primary-run odvut">Join Now</button>
 
         </div>
         <div class="run-img">
