card-section-added

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h1>Run an Extra <br>
                 Mile Easily</h1>
             <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br>hundreds of professional workouts.</p>
-            <button class="btn-primary-run odvut">Join Now</button>
+            <button class="btn-primary  border">Join Now</button>
 
         </div>
         <div class="run-img">
@@ -96,9 +96,64 @@
 
 
 
-    
+
+    <section class="card-container">
+        <div class="card-content">
+            <h1> Meet Our Team </h1>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        </div>
+        <div class="card-image-body">
+            <div class="card-team">
+                <img src="images/trainer1.png" alt="">
+                <div class="card-text">
+                    <h4>Jerome Bell</h4>
+                    <p>Trainer</p>
+                </div>
+
+            </div>
+            <div class="card-team"><img src="images/trainer2.png" alt="">
+                <div class="card-text">
+                    <h4>Cameron Will</h4>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="card-team"><img src="images/trainer3.png" alt="">
+                <div class="card-text">
+                <h4>Darrell Steward</h4>
+                <p>Trainer</p>
+            </div></div>
+            <div class="card-team"><img src="images/trainer4.png" alt="">
+                <div class="card-text">
+                    <h4>Dianne Russell</h4>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="card-team"><img src="images/trainer5.png" alt="">
+                <div class="card-text">
+                    <h4>Cody Fisher</h4>
+                    <p>Trainer</p>
+                </div>
+            </div>
+            <div class="card-team"><img src="images/trainer6.png" alt="">
+                <div class="card-text">
+                    <h4>Theresa Webb</h4>
+                    <p>Trainer</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
    </main>
-   <footer></footer>
+   <footer>
+
+
+
+
+
+
+
+
+   </footer>
 
 </body>
 </html>
