--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
                 <button class="btn-primary  border">Join Club Now!</button>
                 <button class="btn-primary  button-content">Download App</button>
             </div>
-
-
         </div>
         <div class="second-banner">
             <img src="images/Images 2.png" alt="">
@@ -145,7 +143,41 @@
     </section>
    </main>
    <footer>
+    <div class="footer-container">
+        <div class="footer-content">
+            <h2 class="nav-color"><i>Fitness</i> </h2>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
 
+        </div>
+        <div class="footer-content">
+            <ul>
+                <li><h3>Get Started</h3></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Affiliate Program</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+
+        </div>
+        <div class="footer-content">
+            <ul>
+                <li><h3>Get Started</h3></li>
+                <li><a href="#">Fitness</a></li>
+                <li><a href="#">Platform</a></li>
+                <li><a href="#">Workout Library</a></li>
+                <li><a href="#">App Design</a></li>
+            </ul>
+
+        </div>
+    </div>
+    <div class="last-content">
+        <hr>
+        <p>All right reserved @Fitness 2024</p>
+    </div>
+    
+
+
+    
 
 
 
