--- a/index.html
+++ b/index.html
@@ -152,20 +152,20 @@
         <div class="footer-content">
             <ul>
                 <li><h3>Get Started</h3></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">Affiliate Program</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="link">Service</a></li>
+                <li><a href="link">Contact us</a></li>
+                <li><a href="link">Affiliate Program</a></li>
+                <li><a href="link">About Us</a></li>
             </ul>
 
         </div>
         <div class="footer-content">
             <ul>
                 <li><h3>Get Started</h3></li>
-                <li><a href="#">Fitness</a></li>
-                <li><a href="#">Platform</a></li>
-                <li><a href="#">Workout Library</a></li>
-                <li><a href="#">App Design</a></li>
+                <li><a href="link">Fitness</a></li>
+                <li><a href="link">Platform</a></li>
+                <li><a href="link">Workout Library</a></li>
+                <li><a href="link">App Design</a></li>
             </ul>
 
         </div>
