--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="run-content">
             <h1>Run an Extra <br>
                 Mile Easily</h1>
-            <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br>hundreds of professional workouts.</p>
+            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With  hundreds of professional workouts.</p>
             <button class="btn-primary  border odvut">Join Now</button>
         </div>
         <div class="run-img">
@@ -130,12 +130,9 @@
                     <input type="text" placeholder="Age">
                     <select name="" id="Sex">
                         <option value="">Sex</option>
-                        <option value="">Male</option>
-                        <option value="">Female</option>
                     </select>
-                    <select name="" id="factor">
+                     <select name="" id="factor">
                         <option value="">Select an activity factor</option>
-                        <option value="">factor</option>
                     </select>
                     <button class="btn-primary  border">Calculate</button>
                 </div>
