--- a/index.html
+++ b/index.html
@@ -185,6 +185,35 @@
             </div>
         </div>
     </section>
+
+    <section class="instruments">
+        <div class="instruments-container">
+            <div class="instruments-left">
+                <h1>850+
+                </h1>
+                <h2>World Class Excessories </h2>
+                <div class="card-1">
+                    <i class="fa-regular fa-clock"></i>
+                    <p>Flexible hours <br>to practice</p>
+
+                </div>
+                <div class="card-2">
+                    <i class="fa-solid fa-carrot"></i>
+                    <p>Top Trainer and <br> nutritionist</p>
+                </div>
+                <button class="btn-primary width">Browse all demos</button>
+
+            </div>
+            <div class="instruments-right">
+                <img src="images/dumble.jpg" alt="">
+                <img src="images/rope.jpg" alt="">
+                <img src="images/weight.jpg" alt="">
+                <img src="images/trainer.jpg" alt="">
+
+            </div>
+        </div>
+    </section>
+
    </main>
    <footer>
     <div class="footer-container">
