--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     <section class="instruments">
         <div class="instruments-container">
-            <div class="instruments-left">
+            <div class="instruments-first">
                 <h1>850+
                 </h1>
                 <h2>World Class Excessories </h2>
@@ -204,7 +204,7 @@
                 <button class="btn-primary width">Browse all demos</button>
 
             </div>
-            <div class="instruments-right">
+            <div class="instruments-second">
                 <img src="images/dumble.jpg" alt="">
                 <img src="images/rope.jpg" alt="">
                 <img src="images/weight.jpg" alt="">
