--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
         </div>
         <div class="habits-container">
-            <div class="habit">
+            <div class="habit-content">
                 <img src="images/image 3.png" alt="">
                 <h4>Movement</h4>
                 <p>We believe fitness should be <br> accessible to everyone</p>
             </div>
-            <div class="habit">
+            <div class="habit-content">
                 <img src="images/image19.png" alt="">
                 <h4>Time</h4>
                 <p>We believe fitness should be <br> accessible to everyone</p>
             </div>
-            <div class="habit">
+            <div class="habit-content">
                 <img src="images/image20.png" alt="">
                 <h4>Practice</h4>
                 <p>We believe fitness should be <br> accessible to everyone</p>
             </div>
-            <div class="habit">
+            <div class="habit-content">
                 <img src="images/image 5.png" alt="">
                 <h4>Weight Loss</h4>
                 <p>We believe fitness should be <br> accessible to everyone</p>
